--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.7",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
+    "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
@@ -36,6 +39,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~50.0.3",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
