--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@types/node-forge": "^1.3.11",
     "axios": "^1.6.7",
+    "blowfish-js": "^1.0.0",
     "expo": "~50.0.11",
     "expo-font": "~11.10.3",
     "expo-image": "~1.10.6",
@@ -29,6 +31,7 @@
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
     "nativewind": "^2.0.11",
+    "node-forge": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
